tests/sumo/spec/departure/errors/speed_given50/errors.sumo.meso
Warning: Network contains internal links which are ignored. Vehicles will 'jump' across junctions and thus underestimate route lengths and travel times.
Error: Departure speed for vehicle '1' is too high for the departure edge 'beg', time=0.00.
Quitting (on error).
